# Game-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/shaders/: beam.frag  beam.vert  bg.frag  bg.vert  bloom_blur.frag  bloom_threshold.frag  composite.frag  entity.frag  entity.vert  fullscreen.vert  light_point.frag  light_point.vert  occluder.frag  occluder.vert  particles.frag  particles.vert  shadow_1d.frag  shadow_1d.vert  sprite.frag  sprite.vert  tile.frag  tile.vert  tile_lit.frag  tile_lit.vert  tonemap.frag  trail.frag  trail.vert  ui.frag  ui.vert
src/: main.cpp
src/core/: EventBus.h  Input.cpp  Input.h  Timer.h  Window.cpp  Window.h
src/ecs/: Components.h  ECS.h
src/game/: AnimationSystem.cpp  AnimationSystem.h  CameraController.cpp  CameraController.h  Game.cpp  Game.h  Inventory.h  Item.h  LightEngine.cpp  LightEngine.h  Physics.h  Player.cpp  Player.h  UISystem.cpp  UISystem.h
src/renderer/: BeamRenderer.cpp  BeamRenderer.h  Camera.cpp  Camera.h  EntityRenderer.cpp  EntityRenderer.h  FrameBuffer.cpp  FrameBuffer.h  LightSystem.cpp  LightSystem.h  ParticleSystem.cpp  ParticleSystem.h  PostProcess.cpp  PostProcess.h  RenderPipeline.cpp  RenderPipeline.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderLibrary.cpp  ShaderLibrary.h  SpriteBatch.cpp  SpriteBatch.h  Texture.cpp  Texture.h  TileRenderer.cpp  TileRenderer.h  TrailRenderer.cpp  TrailRenderer.h  UniformBuffer.h
src/vfx/: ScreenEffects.cpp  ScreenEffects.h  Theme.h  ThemeRegistry.cpp  ThemeRegistry.h  UnifiedVFX.cpp  UnifiedVFX.h  VFXCombo.cpp  VFXCombo.h
src/world/: BiomeSystem.h  Chunk.cpp  Chunk.h  Noise.h  StructureGen.cpp  StructureGen.h  Tile.h  TileRegistry.cpp  TileRegistry.h  World.cpp  World.h
